<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/md_theme_light_inverseOnSurface"
    tools:context=".SocialFragment">
    >

    <LinearLayout
        android:id="@+id/linVertMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/tvAccount"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/social" />

        <LinearLayout
            android:id="@+id/llFacebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="@dimen/SocialIconWidth"
                android:layout_height="@dimen/SocialIconHeight"
                android:layout_weight="0"
                android:src="@drawable/social_facebook" />

            <TextView
                android:id="@+id/tvFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:autoLink="web"
                android:text="@string/Facebook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWeb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivWeb"
                android:layout_width="@dimen/SocialIconWidth"
                android:layout_height="@dimen/SocialIconHeight"
                android:layout_weight="0"
                android:src="@drawable/social_web" />

            <TextView
                android:id="@+id/tvWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:autoLink="web"
                android:text="@string/Website" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="@dimen/SocialIconWidth"
                android:layout_height="@dimen/SocialIconHeight"
                android:layout_weight="0"
                android:src="@drawable/social_at" />

            <TextView
                android:id="@+id/tvAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:autoLink="email"
                android:text="@string/Email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="@dimen/SocialIconWidth"
                android:layout_height="@dimen/SocialIconHeight"
                android:layout_weight="0"
                android:src="@drawable/social_phone" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:autoLink="phone"
                android:text="@string/PhoneNumber" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>