<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:menu="@menu/top_app_bar"
        app:title="@string/Home"
        app:titleCentered="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/mtHome"
        android:id="@+id/llImageLayout"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/mad_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbuttonLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/llImageLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tgSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:weightSum="1">

            <Button
                android:id="@+id/btnAbout"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AboutSAFFI" />

            <Button
                android:id="@+id/btnMAD"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MAD" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llImageIntro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llbuttonLayout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/mad_intro" />
    </LinearLayout>

</RelativeLayout>